--- a/index.html
+++ b/index.html
@@ -32,48 +32,9 @@
   <div id="bcontent">
     <h2>Vitajte na našich stránkach</h2>
     <!--Nadpis stranky na ktorej sa clovek nachadza, prvy riadok v texte-->
+    <center><img src="image/reklama.png" /></center>
     <br />
-    <div id="video">
-      <!-- java script na video - resp slider fotiek-->
-      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="320" height="240" id="FlashID" title="video">
-        <param name="movie" value="video.swf" />
-        <param name="quality" value="high" />
-        <param name="wmode" value="opaque" />
-        <param name="swfversion" value="6.0.65.0" />
-        <!-- This param tag prompts users with Flash Player 6.0 r65 and higher to download the latest version of Flash Player. Delete it if you don’t want users to see the prompt. -->
-        <param name="expressinstall" value="Scripts/expressInstall.swf" />
-        <!-- Next object tag is for non-IE browsers. So hide it from IE using IECC. -->
-        <!--[if !IE]>-->
-        <object type="application/x-shockwave-flash" data="video.swf" width="320" height="240">
-          <!--<![endif]-->
-          <param name="quality" value="high" />
-          <param name="wmode" value="opaque" />
-          <param name="swfversion" value="6.0.65.0" />
-          <param name="expressinstall" value="Scripts/expressInstall.swf" />
-          <!-- The browser displays the following alternative content for users with Flash Player 6.0 and older. -->
-          <div>
-            <h4>Content on this page requires a newer version of Adobe Flash Player.</h4>
-            <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" width="112" height="33" /></a></p>
-          </div>
-          <!--[if !IE]>-->
-        </object>
-        <!--<![endif]-->
-      </object>
-    </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-                                  setInterval ("ukaz()", 5000);
-                                  function ukaz(){
-                                  $("#div").show();
-                                  };
-                    </script>
-    <div id="div" style="display:none"> </div>
-  </div>
- <script type="text/javascript">
-  swfobject.registerObject("FlashID");
-  swfobject.registerObject("FLVPlayer");
-  swfobject.registerObject("FlashID");
-</script> 
+ </div> 
 </div>
 
               
@@ -81,7 +42,7 @@
   <ul>
     <footer align="center">
     <div id="link4">
-      <li><a  href ="mailto: barinys@gmail.com "> support.eyeblink@gmail.com </a></li>
+      <li><a  href ="mailto: barinys@gmail.com "> support.eyeblink@eyeblink.com </a></li>
     </div>
     <div id="link1">
       <li><a href="http://facebook.com" title="Facebook"><img src="image/facebook-icon.png" /></a></li>
