modified:   Thumbs.db 	modified:   css.css 	modified:   css/Thumbs.db 	modified:   eyeblink.html 	modified:   image/Thumbs.db 	modified:   image/footer.png 	modified:   image/footer.psd 	modified:   index.html 	modified:   kontakt.html 	modified:   suche_oci.html
 Untracked files:
	e_faq.html
	e_navod.html
	e_program.html
e_stiahnut.html
	image/button.png
	image/button_pressed.psd
	image/button_pressed_better.psd
	image/header.jpg
	image/header2.jpg
	image/header_no_logo.png
	image/header_no_logo.psd
	image/logo_eyeblink.png
	image/logo_eyeblink.psd
	image/logo_eyeblink_masked2.psd
	image/logo_eyeblink_masked2_green.psd
	image/reklama2.png
	k_tvorcovia.html
	k_udaje.html
	s_liecenie.html
	s_priciny_vzniku.html
	s_syndrom.html
	small_circle.png

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="eyeblink, suché oči, syndróm scuhého oka, riešenie scuhých očí " />
 <meta name="description" content="Eyeblink, portál o scuhých očiach" />
@@ -8,53 +9,56 @@
 <title>Projekt EyeBlink</title>
 <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
-<body onload="MM_preloadImages('image/zaruka.png')">
-<br />
-<a href="index.html" title="Hlavná stránka">
-<!-- toto je odkaz na hlavn[ str8nku ak clovek klikne hocikde na logo alebo nadpis-->
-<div id="header"></div>
-</a>
-<div id="menu">
-  <!-- menu tlacidiel, dospecifikovane v CSS -->
-  <ul>
-    <div id="link1">
-      <li><a href="suche_oci.html" title="Syndróm suchého oka"><img src="image/button1.png" /></a></li>
+<div id="header">
+ <a href="index.html" title="Hlavná stránka" class="logo"><img class="logo" src="image/logo_eyeblink.png" /></a>
+ 	<div id="roll_menu">
+         <ul class="ul_menu">
+            <li class="li_prva_vrstva"><a href="suche_oci.html" title="Syndróm suchého oka">O suchých očiach</a>
+                <ul class="ul_menu_under">
+                  <li class="li_druha_vrstva"><a href="s_syndrom.html" title="Syndrómy">Syndrómy</a></li> 
+                  <li class="li_druha_vrstva"><a href="s_priciny_vzniku.html" title="Príčiny">Príčiny</a></li>
+                  <li class="li_druha_vrstva"><a href="s_liecenie.html" title="Lieča">Liečba</a></li>
+                </ul>
+            </li>
+            <li class="li_prva_vrstva"><a href="eyeblink.html" title="Eyeblink program">Eyeblink</a>
+                <ul class="ul_menu_under">
+                  <li class="li_druha_vrstva"><a href="e_program.html" title="Viac o programie">O programe</a></li>
+                  <li class="li_druha_vrstva"><a href="e_navod.html" title="Návod k programu">Návod</a></li>
+                  <li class="li_druha_vrstva"><a href="e_stiahnut.html" title="Stiahnutie programu">Stiahnuť</a></li>  
+                  <li class="li_druha_vrstva"><a href="e_faq.html" title="Často kladené otázky">FAQ</a></li>
+
+                </ul>
+            </li>
+            <li class="li_prva_vrstva"><a href="kontakt.html" title="Kontakty">Kontakt</a>     
+                <ul class="ul_menu_under">
+                  <li class="li_druha_vrstva"><a href="k_tvorcovia.html" title="O tvorcoch programu">Tvorcovia</a></li>
+                  <li class="li_druha_vrstva"><a href="k_udaje.html" title="Kontaktné údaje">Kontakné údaje</a></li>
+                  <li class="li_druha_vrstva"><a href="index.html" title="Syndrómy">Free Button?</a></li>
+                </ul>
+            </li>
+          <li class="li_prva_vrstva"><a href="forum.html" title="Fórum">Fórum</a></li>
+        </ul>   
     </div>
-    <div id="link2">
-      <li><a href="eyeblink.html" title="Eyeblink program"><img src="image/button2.png" /></a></li>
-    </div>
-    <div id="link3">
-      <li><a href="kontakt.html" title="Kontakty"><img src="image/button3.png" /></a></li>
-    </div>
-  </ul>
 </div>
 <div id="content">
   <div id="bcontent">
-    <h2>Vitajte na našich stránkach</h2>
+    
     <!--Nadpis stranky na ktorej sa clovek nachadza, prvy riadok v texte-->
-    <center><img src="image/reklama.png" /></center>
+    <center><img src="image/reklama2.png" /></center>
     <br />
  </div> 
 </div>
 
               
 <div id="footer">
-  <ul>
-    <footer align="center">
-    <div id="link4">
-      <li><a  href ="mailto: barinys@gmail.com "> support.eyeblink@eyeblink.com </a></li>
-    </div>
-    <div id="link1">
-      <li><a href="http://facebook.com" title="Facebook"><img src="image/facebook-icon.png" /></a></li>
-    </div>
-    <div id="link2">
-      <li><a href="http://twitter.com" title="Twitter"><img src="image/twitter_logo.png" /></a></li>
-    </div>
-    <div id="link3">
-      <li><a href="http://googleplus.com" title="Google Plus"><img src="image/google_plus.png" /></a></li>
-    </div>
-  </ul>
+  <footer align="center">
+  	 <a  href ="eyeblink.html" class="link5"> STIAHNUŤ IHNEĎ </a>
+     <a  href ="mailto: barinys@gmail.com" class="link4"> support.eyeblink@eyeblink.com </a>
+     <a href="http://facebook.com" title="Facebook" class="link1"><img src="image/facebook-icon.png" /></a>
+     <a href="http://twitter.com" title="Twitter" class="link2"><img src="image/twitter_logo.png" /></a>
+     <a href="http://googleplus.com" title="Google Plus" class="link3"><img src="image/google_plus.png" /></a>
   </footer>
 </div>
+
 </body>
 </html>
