new file:   Templates/_notes/dwsync.xml 	new file:   Templates/predloha.dwt 	new file:   _notes/dwsync.xml 	modified:   css.css 	new file:   e_faq.html 	new file:   e_navod.html 	new file:   e_program.html 	new file:   e_stiahnut.html 	modified:   eyeblink.html 	modified:   image/Thumbs.db 	new file:   image/_notes/dwsync.xml 	new file:   image/button.png 	new file:   image/button_pressed.psd 	new file:   image/button_pressed_better.psd 	new file:   image/face.png 	new file:   image/face50.png 	new file:   image/google50.png 	new file:   image/header.jpg 	new file:   image/header2.jpg 	new file:   image/header_no_logo.png 	new file:   image/header_no_logo.psd 	new file:   image/logo_eyeblink.png 	new file:   image/logo_eyeblink.psd 	new file:   image/logo_eyeblink_masked2.psd 	new file:   image/logo_eyeblink_masked2_green.psd 	new file:   image/reklama2.png 	new file:   image/retina_dust/Thumbs.db 	new file:   image/retina_dust/_notes/dwsync.xml 	new file:   image/retina_dust/retina_dust.png 	new file:   image/twitter50.png 	modified:   index.html 	new file:   k_tvorcovia.html 	new file:   k_udaje.html 	modified:   kontakt.html 	new file:   s_liecenie.html 	new file:   s_priciny_vzniku.html 	new file:   s_syndrom.html 	new file:   small_circle.png 	modified:   suche_oci.html

--- a/e_faq.html
+++ b/e_faq.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -50,13 +49,15 @@
 <!-- InstanceEndRepeatEntry --><!-- InstanceEndRepeat -->
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
-<div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+
+</div><div id="content">
+  <div id="bcontent_sucheoci">
+    <h2>FAQ často kladené otázky</h2>
+    <p>často kladené otázky v ostavcoch idelane s rozskrolovanim?</p>
   </div>
 </div>
+
+
 <!-- InstanceEndEditable -->
           
 <div id="footer">
