--- a/s_liecenie.html
+++ b/s_liecenie.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -51,12 +50,22 @@
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
 <div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+  <div id="bcontent_sucheoci">
+    <h2>Liečba</h2>
+    <br />
+   <p> Liečba syndrómu suchého oka vychádza zo závažnosti ochorenia a z príčin, ktoré ho spôsobujú. Dôležité je zamerať sa aj na celkové ochorenia, ktoré môžu byť príčinou syndrómu suchého oka – včasná diagnóza a správna liečba zmenší problémy a zlepší kvalitu videnia i samotného života.</p>
+<p>Ľahšie formy ochorenia je možné liečiť pomocou:
+•	Kvapiek (umelých sĺz) -  ktoré oko zvlhčujú a chránia, na trhu je široké spektrum  (je potrebné poradiť sa s očným lekárom).
+•	Očný gél - ktorý sa zväčša aplikuje na noc.</p>
+<p>Očný spray - pri šoférovaní, v spoločnosti je možné použiť špeciálny spray na hornú mihalnicu – viečko. Látka prejde cez pokožku na povrch oka a zavlaží ho.</p>
+
+<p>V ťažších prípadoch pri extrémne suchých očiach lekári odporúčajú  pristúpiť k operácii, ktorá dočasne alebo natrvalo zablokuje odtokové kanáliky (pomocou implantátov), či k chirurgickému riešeniu problémov s očnými viečkami. Cieľom liečby je vytvoriť rovnomernú vrstvu slzného filmu, ktorá na oku určitú dobu zostane a zabráni jeho vysychaniu a dráždeniu. Chirurgický implantát ale nie je hradený zo zdravotného poistenia.</p>
+
+<p>Súčasťou liečby je aj správna hygiena očných viečok. Je dôležité vyhýbať sa stresovým faktorom a odstrániť faktory vonkajšieho prostredia, ktoré problém negatívne ovplyvňujú atď. Vhodná je aj zmena životného štýlu – prechádzky na čerstvom vzduchu, časté vetranie a dostatok tekutín.</p>
+
   </div>
 </div>
+
 <!-- InstanceEndEditable -->
           
 <div id="footer">
