--- a/s_priciny_vzniku.html
+++ b/s_priciny_vzniku.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -51,12 +50,19 @@
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
 <div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+  <div id="bcontent_sucheoci">
+    <h2>Príčiny vzniku syndrómu</h2>
+    <br />
+    <p>Príčinou tohto ochorenia je porucha tvorby a toku slzného filmu na povrchu oka. 
+Tento film je tvorený troma zložkami, voda, olej, hlien, ktoré oči chránia a zvlhčujú. Hrúbka jednotlivých vrstvičiek je variabilná a závislá na množstve a kvalite produkovaných sĺz.</p>
+ <p>Spomalenie tvorby a nedostatočnú kvalitu sĺz, má na svedomí chýbajúca olejová zložka v dôsledku čoho sa nedokážu slzy v oku udržať a oko vysychá. Tento jav môže mať za následok nepríjemné pocity, pálenie v oku, pocit cudzieho telieska a svrbenie oka.</p>
+<p> V pokročilejších štádiách neliečenej choroby aj bolesť alebo výraznú svetloplachosť, sprevádzané neustálym dráždením oka, ktoré môže viesť až k jeho poškodeniu. 
+Dôvodov, ktoré toto ochorenie spôsobujú môže byť veľa. Patrí medzi ne znížená výkonnosť žliazok alebo ich zánik v dôsledku choroby (napríklad autoimunitných ochorení alebo ochorení kože). Na kvalitu sĺz majú však vplyv aj hormonálne zmeny hlavne u ženského pohlavia v období menopauzy a to v pomere až 1:9 alebo užívanie niektorých liekov, prevažne lieky proti sezónnym alergiám, ale aj lieky užívané proti nespavosti alebo antikoncepcia.</p>
+ <p>Náchylnejším sa človek môže stať aj vplyvom životného prostredia, najmä ak je opakovane vystavovaný nadmernému vetru, slnečnému žiareniu alebo aj suchu bez potrebnej ochrany zraku. Isté riziko predstavuje aj pracovné prostredie napríklad klimatizované kancelárie, dlhodobá práca s počítačom bez odpočinku, sledovanie televízie ale aj prašné prostredie, nosenie kontaktných šošoviek a stres. Niekedy sa toto ochorenie objavuje aj u ľudí so získanými alebo vrodenými deformáciami očných viečok. </p>
+
   </div>
 </div>
+
 <!-- InstanceEndEditable -->
           
 <div id="footer">
