--- a/s_syndrom.html
+++ b/s_syndrom.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -51,10 +50,35 @@
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
 <div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+  <div id="bcontent_sucheoci">
+    <h2>Syndrómy suchého oka</h2>
+    <br />
+    <p> Syndróm suchého oka (lat. Keratoconjunctivitis sicca) je očné ochorenie, spôsobené narušenou tvorbou slzného filmu oka. Je to najčastejšie očné ochorenie postihujúce asi 10% populácie. </p>
+    <p> Pacientov s týmto ochorením zvyčajne trápia nepríjemné pocity pálenia, svrbenia a rezania očí ktoré môže sprevádzať tlak v očiach, svetloplachosť, zhoršené videnie, začervenanie očí alebo aj bolesti hlavy. Môže sa objaviť pocit cudzieho predmetu v očiach. Symptómy sa v priebehu dňa zvyčajne  zhoršujú. Niekedy sa objaví nadmerné slzenie, pretože oči sú podráždené. </p>
+    <p> V prípade že problém trvá dlhšiu dobu a nie je správne liečený, môže vyvolať komplikácie a spôsobiť poškodenie oka, čo môže skončiť poruchou zraku. 
+      Syndróm suchého oka môže byť zvyčajne diagnostikovaný podľa symptómov. Existujú aj testy ktorými sa určí kvalita a kvantita sĺz. </p>
+    <p> Ak je vaša odpoveď áno aspoň na 5 otázok z týchto otázok, pravdepodobne máte syndróm suchého oka: </p>
+    <ul>
+      <li>Máte pocit piesku v očiach? </li>
+      <li>Napriek tomu Vám oči neslzia? </li>
+      <li>Mávate červené oči? </li>
+      <li>Mávate pocit „ťažkých“ – unavených očí?</li>
+      <li>Mávate sezónne alergie? </li>
+      <li>Vnímate svetlo nepríjemne, alebo bolestivo? </li>
+      <li>Zobúdzate sa ráno so zalepenými očami, „karpinami“? </li>
+      <li>Najväčšie problémy máte večer? </li>
+      <li>Niektoré ochorenia zvýrazňujú Syndróm suchého oka</li>
+      <li>Sjogrenov syndróm </li>
+      <li>Môžete jesť jedlo bez zapíjania </li>
+      <li>Máte pocit praskania v kĺboch? </li>
+      <li>Máte nejaké systémové choroby? </li>
+      <li>Užívate nejaké lieky, kvapky? </li>
+      <li>Cukrovka – Diabetes mellitus </li>
+      <li>Akne rosacea </li>
+      <li>Reumatoidná artritída</li>
+    </ul>
+    <p> Pacientov s týmto ochorením zvyčajne trápia nepríjemné pocity pálenia, svrbenia a rezania očí ktoré môže sprevádzať tlak v očiach, svetloplachosť, zhoršené videnie, začervenanie očí alebo aj bolesti hlavy. Môže sa objaviť pocit cudzieho predmetu v očiach. Symptómy sa v priebehu dňa zvyčajne  zhoršujú. Niekedy sa objaví nadmerné slzenie, pretože oči sú podráždené. </p>
+    <p> Pacientov s týmto ochorením zvyčajne trápia nepríjemné pocity pálenia, svrbenia a rezania očí ktoré môže sprevádzať tlak v očiach, svetloplachosť, zhoršené videnie, začervenanie očí alebo aj bolesti hlavy. Môže sa objaviť pocit cudzieho predmetu v očiach. Symptómy sa v priebehu dňa zvyčajne  zhoršujú. Niekedy sa objaví nadmerné slzenie, pretože oči sú podráždené. </p>
   </div>
 </div>
 <!-- InstanceEndEditable -->
