--- a/e_navod.html
+++ b/e_navod.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -50,13 +49,14 @@
 <!-- InstanceEndRepeatEntry --><!-- InstanceEndRepeat -->
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
-<div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+
+</div><div id="content">
+  <div id="bcontent_sucheoci">
+    <h2>Syndrómy suchého oka</h2>
+    <p> strucny navod instalacie programu</p>
   </div>
 </div>
+
 <!-- InstanceEndEditable -->
           
 <div id="footer">
