--- a/k_udaje.html
+++ b/k_udaje.html
@@ -1,5 +1,4 @@
-</pre>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 
@@ -51,10 +50,9 @@
 </div>
 <!-- InstanceBeginEditable name="EditBody" -->
 <div id="content">
-  <div id="bcontent">
-    <h2>O programe EyeBlink</h2>
-		<p> zakladna motivacia na co mi je tent program </p>   
-	<br /> 
+  <div id="bcontent_sucheoci">
+    <h2>Údaje o spoločnosti</h2>
+    <p>tu su zakladene info o firme</p>
   </div>
 </div>
 <!-- InstanceEndEditable -->
