--- a/suche_oci.html
+++ b/suche_oci.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/predloha.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
+
+<!-- InstanceBeginRepeat name="RepeatHead" --><!-- InstanceBeginRepeatEntry -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="eyeblink, suché oči, syndróm scuhého oka, riešenie scuhých očí " />
 <meta name="description" content="Eyeblink, portál o scuhých očiach" />
 <link href="css.css" rel="stylesheet" type="text/css" />
+
 <title>Projekt EyeBlink</title>
 <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+<!-- InstanceEndRepeatEntry --><!-- InstanceEndRepeat -->
 </head>
 <body>
+
 <div id="header">
+<!-- InstanceBeginRepeat name="header" --><!-- InstanceBeginRepeatEntry -->
  <a href="index.html" title="Hlavná stránka" class="logo"><img class="logo" src="image/logo_eyeblink.png" /></a>
  	<div id="roll_menu">
          <ul class="ul_menu">
@@ -40,8 +46,10 @@
           <li class="li_prva_vrstva"><a href="forum.html" title="Fórum">Fórum</a></li>
         </ul>   
     </div>
+<!-- InstanceEndRepeatEntry --><!-- InstanceEndRepeat -->
 </div>
-</div><div id="content">
+<!-- InstanceBeginEditable name="EditBody" -->
+<div id="content">
   <div id="bcontent_sucheoci">
     <h2>Syndrómy suchého oka</h2>
     <br />
@@ -73,15 +81,19 @@
     <p> Pacientov s týmto ochorením zvyčajne trápia nepríjemné pocity pálenia, svrbenia a rezania očí ktoré môže sprevádzať tlak v očiach, svetloplachosť, zhoršené videnie, začervenanie očí alebo aj bolesti hlavy. Môže sa objaviť pocit cudzieho predmetu v očiach. Symptómy sa v priebehu dňa zvyčajne  zhoršujú. Niekedy sa objaví nadmerné slzenie, pretože oči sú podráždené. </p>
   </div>
 </div>
+
+<!-- InstanceEndEditable -->
+          
 <div id="footer">
   <footer align="center">
+  <!-- InstanceBeginRepeat name="footer" --><!-- InstanceBeginRepeatEntry -->   
   	 <a  href ="eyeblink.html" class="link5"> STIAHNUŤ IHNEĎ </a>
-     <a  href ="mailto: barinys@gmail.com" class="link4">  support.eyeblink@eyeblink.com  </a>
-     <a href="http://facebook.com" title="Facebook" class="link1"><img src="image/facebook-icon.png" /></a>
-     <a href="http://twitter.com" title="Twitter" class="link2"><img src="image/twitter_logo.png" /></a>
-     <a href="http://googleplus.com" title="Google Plus" class="link3"><img src="image/google_plus.png" /></a>
+     <a  href ="mailto: barinys@gmail.com" class="link4"> support.eyeblink@eyeblink.com </a>
+     <a href="http://facebook.com" title="Facebook" class="link1"><img src="image/face50.png" /></a>
+     <a href="http://twitter.com" title="Twitter" class="link2"><img src="image/twitter50.png" /></a>
+     <a href="http://googleplus.com" title="Google Plus" class="link3"><img src="image/google50.png" /></a>
+    <!-- InstanceEndRepeatEntry --><!-- InstanceEndRepeat -->  
   </footer>
 </div>
-
 </body>
-</html>
+<!-- InstanceEnd --></html>
